--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 <body>
   <header>
     <div class="container">
-      <h1>Hi, I'm Archana Suresh!</h1>
+      <h1>Hi, I'm Archana!</h1>
       <p>Cloud Enthusiast & DevOps Learner | AWS | CI/CD | Automation</p>
       <div class="social-links">
         <a href="https://www.linkedin.com/in/archana-suresh-36b7b0238" target="_blank"><i class="fab fa-linkedin"></i></a>
